syntax = "proto3";

import "google/protobuf/empty.proto";

package department;
// =================


message Department {
    int32 dp_id = 1;
    string dp_name = 2;
    string dp_description = 3;
}

message DepartmentSaving {
    string dp_name = 1;
    string dp_description = 2;
}

message DepartmentIdRequest {
    int32 dp_id = 1;
}

message DepartmentResponses {
    repeated Department department = 1;
}

service DepartmentService {
    rpc find_departments (google.protobuf.Empty) returns (DepartmentResponses);
    rpc find_department_by_id (DepartmentIdRequest) returns (Department);
    rpc save_department (DepartmentSaving) returns (google.protobuf.Empty);
    rpc remove_department_by_id (DepartmentIdRequest) returns (google.protobuf.Empty);
}
